[tool.poetry]
name = "password-protected-docs"
version = "0.1.0"
description = ""
authors = ["Sid Palas <sid.palas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sphinx = "^3.0.1"
sphinx-rtd-theme = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
